Avoid copy/paste errors with whitespace chars.
By inserting them in :before CSS, it's not possible to copy it. This
avoids problems of having these strange chars in translations.

Fixes #764

--- a/weblate/media/style-bootstrap.css
+++ b/weblate/media/style-bootstrap.css
@@ -141,6 +141,12 @@ textarea#id_comment {
     width: 4em;
     text-align: center;
 }
+.space-tab:before {
+    content: "→";
+}
+.space-nl:before {
+    content: "↵";
+}
 ins {
     background-color: lightgreen;
 }
